--- a/src/main/.env
+++ b/src/main/.env
@@ -1,5 +1,5 @@
 DOMAIN = "proquinal.com"
 DOMAIN_USER = "proquinal\\romero-josue"
-DOMAIN_PASS = "Jo320872."
+DOMAIN_PASS = "Jo320872.."
 LOCAL_ADMIN_USER = "soporte"
 LOCAL_ADMIN_PASS = "K1lk3nny*21f0rz4"
